#371 issue explore countries, fix truncate reference when larger than 2 lines

--- a/frontend/css/rodi_css.css
+++ b/frontend/css/rodi_css.css
@@ -366,10 +366,7 @@ h1 + .lead {
 ==============================================================================
 */
 
-p {
-    font-family: Arial;
-    color: #234F5C;
-}
+
 
 .trunkate {
     background: transparent;
